--- a/BoneTexture/Resources/UI/BoneTexture.ui
+++ b/BoneTexture/Resources/UI/BoneTexture.ui
@@ -85,7 +85,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="GroupCaseGroupBox">
+       <widget class="QGroupBox" name="MultiCaseGroupBox">
         <property name="enabled">
          <bool>true</bool>
         </property>
@@ -106,15 +106,15 @@
            </property>
           </widget>
          </item>
+         <item row="0" column="1">
+          <widget class="ctkPathLineEdit" name="InputScansPathLineEdit"/>
+         </item>
          <item row="1" column="0">
           <widget class="QLabel" name="InputSegmentationsLabel">
            <property name="text">
             <string>Input Segmentations</string>
            </property>
           </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="ctkPathLineEdit" name="InputScansPathLineEdit"/>
          </item>
          <item row="1" column="1">
           <widget class="ctkPathLineEdit" name="InputSegmentationsPathLineEdit"/>
@@ -425,6 +425,9 @@
     <widget class="ctkCollapsibleButton" name="ResultsCollapsibleButton">
      <property name="text">
       <string>Results</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
      <property name="contentsFrameShape">
       <enum>QFrame::StyledPanel</enum>
